# replic8

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init_db.sh  startup.sh
migrations/: 20240727022609_create_subscriptions_table.sql
src/: main.rs
