[package]
name = "replic8"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
futures = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.39.1", features = ["full"] }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
